syntax = "proto3";

package org.project_planton.provider.kubernetes.addon.certmanager.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/certmanager/v1/spec.proto";
import "org/project_planton/provider/kubernetes/certmanager/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//cert-manager
message CertManager {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'CertManager'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  CertManagerSpec spec = 4 [(buf.validate.field).required = true];

  //status
  CertManagerStatus status = 5;
}

//cert-manager status.
message CertManagerStatus {
  //stack-outputs
  CertManagerStackOutputs outputs = 1;
}
